# djangocms-xliff

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: publish.yaml  tests.yaml
djangocms_xliff/: admin.py  apps.py  cms_toolbars.py  compat.py  exceptions.py  exports.py  extractors.py  forms.py  imports.py  parsers.py  renderer.py  settings.py  types.py  urls.py  utils.py  views.py
djangocms_xliff/locale/de/LC_MESSAGES/: django.mo  django.po
djangocms_xliff/management/commands/: xliff_export.py  xliff_import.py  xliff_page_plugins.py
djangocms_xliff/templates/djangocms_xliff/: base.html  error.html
djangocms_xliff/templates/djangocms_xliff/admin/xliff/: change_list.html  error.html  form_fields.html  overview.html  preview.html
djangocms_xliff/templates/djangocms_xliff/export/: index.html  v1.2.xliff
djangocms_xliff/templates/djangocms_xliff/import/: preview.html  success.html  upload.html
docs/: contribute.md
tests/: cms_plugins.py  conftest.py  models.py  settings.py  test_extractors.py  test_import_validation.py  test_imports.py  test_parsers.py  test_renderer.py  test_utils.py
tests/templates/: testing.html
