[project]
name = "djangocms-xliff"
version = "2.0.0"
description = "XLIFF Import and Export for the Django CMS"
authors = [{ name = "Energie 360", email = "onlineservice@energie360.ch" }]
requires-python = ">=3.13"
readme = "README.md"
license = "MIT"
maintainers = [{ name = "Energie 360", email = "onlineservice@energie360.ch" }]
keywords = [
    "django",
    "django-cms",
    "xliff",
    "import",
    "export",
]
classifiers = [
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries",
    "Framework :: Django",
    "Framework :: Django CMS",
]
dependencies = [
    "Django>=3.2,<6.0",
    "django-cms>=5.0",
    "djangocms-alias>=2.0",
    "defusedxml>=0.7",
]

[project.urls]
Homepage = "https://energie360.ch"
Repository = "https://github.com/energie360/djangocms-xliff"

[dependency-groups]
dev = [
    "pytest>=7.2.0,<8",
    "tox>=3.27.0,<4",
    "pytest-django>=4.5.2,<5",
    "pre-commit>=2.20.0,<3",
    "bump2version>=1.0.1,<2",
]

[tool.hatch.build.targets.sdist]
include = ["djangocms_xliff"]

[tool.hatch.build.targets.wheel]
include = ["djangocms_xliff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.ruff]
line-length = 120
target-version = "py313"
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
